--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,7 @@
             <a th:href="@{/products}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.products}">상품관리</a>
             <a th:href="@{/categories}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.categories}">카테고리관리</a>
             <a th:href="@{/suppliers}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.suppliers}">공급업체관리</a>
+            <a th:href="@{/buyers}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.buyers}">고객관리</a>
 
             <!-- 로그인하지 않은 경우 -->
             <div sec:authorize="isAnonymous()" class="space-x-4">
